--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-  <h1>This is a test</h1>
+  <h1>Merge Tester</h1>
+  <h2>Rev 0.00.000</h2>
+  <p class="color1">
+    Color1
+  </p>
+  <p class="color2">
+    Color2
+  </p>
+  <p class="color3">
+    Color3
+  </p>
 </body>
 
 </html>
