Added scheme1 message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <h1>Merge Tester</h1>
-  <h2>Rev 0.00.000</h2>
+  <h2>Rev 0.00.002</h2>
+  <h3>Added this in scheme1</h3>
   <p class="color1">
     Color1
   </p>
