--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Merge Tester</h1>
   <h2>Rev 0.00.002</h2>
-  <h3>Added this in scheme1</h3>
+  <h3>Added this in scheme1 but not master will it merge?</h3>
   <h3 class="h3special">new header</h3>
   <p class="color1">
     Color1
