Added new features in master

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   </p>
   <p>feature in Scheme1 1</p>
   <p>feature in Scheme1 2</p>
+  <p>Added feature in master1</p>
+  <p>Added feature in master2</p>
 </body>
 
 </html>
